# qmlSamples

./: BarChart.qml  BottomBar.qml  CMakeLists.txt  Clock.qml  Progress_Bar.qml  README.md  SwipeWidget.qml  TabWidget.qml  TabledData.qml  TopBar.qml  VideoPlayer.qml  employee_details.xml  icons.qrc  main.cpp  main.qml  qml.qrc  qmlSamples.pro
